<resources>
    <string name="app_name">Photofeed</string>
    <string name="header_text">My feed</string>
    <string name="footer_text">You\'re up to date</string>
    <string name="profile_user_not_found_text">User not found</string>
    <string name="profile_no_posts_title">No posts yet</string>
    <string name="profile_private_account_title">This account is private</string>
    <string name="profile_private_account_subtitle">Follow this account to see their posts</string>
    <string name="load_more_text">Load more</string>
    <string name="post_detail_screen_title">Post</string>
    <string name="feed_screen_title">Feed</string>
    <string name="post_likes">%s likes</string>
    <string name="post_comments">%s comments</string>
    <string name="inbox_screen_title">Inbox</string>
    <string name="chat_screen_title">Conversation</string>
    <string name="explore_screen_title">Explore</string>
    <string name="account_screen_title">Account</string>
    <string name="about_screen_title">About</string>
    <string name="profile_posts_indicator_title">Posts</string>
    <string name="profile_followers_indicator_title">Followers</string>
    <string name="profile_following_indicator_title">Following</string>
    <string name="login_input_username_hint">Username</string>
    <string name="login_input_password_hint">Password</string>
    <string name="login_button_login_text">Login</string>
    <string name="explore_search_button">Search</string>
    <string name="account_sign_out_button">Sign out</string>
    <string name="login_loading_message">Signing in…</string>
    <string name="bottom_nav_item_list">List</string>
    <string name="bottom_nav_item_favorites">Favorites</string>
    <string name="bottom_nav_item_profile">Profile</string>
</resources>
