<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_sm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUsername"
            style="@style/Input.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/bg_input_light"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_username_hint"
                android:inputType="textVisiblePassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxs"
            android:minHeight="@dimen/button_size_xlg"
            android:text="@string/explore_search_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_size"
        android:background="@color/white"
        android:elevation="@dimen/top_bar_elevation"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topBarTitle"
            style="@style/Text.Profile.ScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xxs"
            android:layout_marginEnd="@dimen/spacing_xxs"
            android:gravity="center"
            android:text="@string/explore_screen_title" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>