<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_screen">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/inputUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_sm"
        app:boxBackgroundColor="@color/bg_input_light"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/inputPassword"
        app:layout_constraintTop_toBottomOf="@id/imgLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_input_username_hint"
            android:inputType="textVisiblePassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_sm"
        app:boxBackgroundColor="@color/bg_input_light"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/inputUsername"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_input_password_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:backgroundTint="@color/white"
        android:minHeight="@dimen/button_size_xlg"
        android:text="@string/login_button_login_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>